[gd_scene load_steps=3 format=3 uid="uid://c8ge2bq6wlen7"]

[ext_resource type="Script" uid="uid://bk25kvwcuamym" path="res://tests/scenes/test_movement.gd" id="1_k317y"]
[ext_resource type="Script" uid="uid://bc5oygqw740iq" path="res://GameController.cs" id="2_avhhv"]

[node name="TestMovement" type="Node2D"]
script = ExtResource("1_k317y")

[node name="UI" type="Node2D" parent="."]

[node name="TestResults" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 24

[node name="TestSprite" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(576, 324)

[node name="GameController" type="Node" parent="."]
script = ExtResource("2_avhhv")
